# BeyondLight

./: .gitignore  CMakeLists.txt
client/: App.cpp  App.hh  BrowserClient.cpp  BrowserClient.hh  CMakeLists.txt  CallBacks.cpp  CallBacks.hh  GLCore.cpp  GLCore.hh  GlfwHandler.cpp  GlfwHandler.hh  KeyHandler.cpp  KeyHandler.hh  MainHandler.cpp  MainHandler.hh  MessageHandler.cpp  MessageHandler.hh  RenderHandler.cpp  RenderHandler.hh  Utils.cpp  Utils.hh  WebCore.cpp  WebCore.hh  WebCoreManager.cpp  WebCoreManager.hh  browser_client.cpp  browser_client.h  gl_core.cpp  gl_core.h  main.cpp  performance_test.cpp  render_handler.cpp  render_handler.h  web_core.cpp  web_core.h
client/html/: background.html  header.html  index.html  login.html  style.css
client/html/backup/: header.html
client/lib/cef/Debug/: libcef.lib
client/lib/cef/Release/: libcef.lib
cmake/: FindOpenSSL.cmake  SelectLibraryConfigurations.cmake
libs/Boost/lib/: libboost_atomic-vc141-mt-1_65_1.lib  libboost_atomic-vc141-mt-gd-1_65_1.lib  libboost_chrono-vc141-mt-1_65_1.lib  libboost_chrono-vc141-mt-gd-1_65_1.lib  libboost_container-vc141-mt-1_65_1.lib  libboost_container-vc141-mt-gd-1_65_1.lib  libboost_context-vc141-mt-1_65_1.lib  libboost_context-vc141-mt-gd-1_65_1.lib  libboost_coroutine-vc141-mt-1_65_1.lib  libboost_coroutine-vc141-mt-gd-1_65_1.lib  libboost_date_time-vc141-mt-1_65_1.lib  libboost_date_time-vc141-mt-gd-1_65_1.lib  libboost_exception-vc141-mt-1_65_1.lib  libboost_exception-vc141-mt-gd-1_65_1.lib  libboost_fiber-vc141-mt-1_65_1.lib  libboost_filesystem-vc141-mt-1_65_1.lib  libboost_iostreams-vc141-mt-1_65_1.lib  libboost_iostreams-vc141-mt-gd-1_65_1.lib  libboost_math_c99-vc141-mt-1_65_1.lib  libboost_math_c99-vc141-mt-gd-1_65_1.lib  libboost_math_c99f-vc141-mt-1_65_1.lib  libboost_math_c99f-vc141-mt-gd-1_65_1.lib  libboost_math_c99l-vc141-mt-1_65_1.lib  libboost_math_c99l-vc141-mt-gd-1_65_1.lib  libboost_prg_exec_monitor-vc141-mt-1_65_1.lib  libboost_prg_exec_monitor-vc141-mt-gd-1_65_1.lib  libboost_random-vc141-mt-1_65_1.lib  libboost_random-vc141-mt-gd-1_65_1.lib  libboost_signals-vc141-mt-1_65_1.lib  libboost_stacktrace_noop-vc141-mt-1_65_1.lib  libboost_stacktrace_noop-vc141-mt-gd-1_65_1.lib  libboost_stacktrace_windbg-vc141-mt-1_65_1.lib  libboost_stacktrace_windbg-vc141-mt-gd-1_65_1.lib  libboost_stacktrace_windbg_cached-vc141-mt-1_65_1.lib  libboost_stacktrace_windbg_cached-vc141-mt-gd-1_65_1.lib  libboost_system-vc141-mt-1_65_1.lib  libboost_system-vc141-mt-gd-1_65_1.lib  libboost_thread-vc141-mt-1_65_1.lib  libboost_thread-vc141-mt-gd-1_65_1.lib  libboost_timer-vc141-mt-1_65_1.lib  (+3 more)
libs/cef/Debug/: libcef.lib
libs/cef/Release/: libcef.lib
libs/glfw/: CMakeLists.txt
libs/openssl-win32/lib/: libeay32MD.lib  libeay32MDd.lib  ssleay32MD.lib  ssleay32MDd.lib
libs/openssl-win32/lib64/: libeay32MD.lib  libeay32MDd.lib  ssleay32MD.lib  ssleay32MDd.lib  ssleay32MT.lib  ssleay32MTd.lib
resources/html/: building.html  buildings.html  chat-message-template.html  chat-template.html  chat.html  entity-template.html  header.html  index.html  left-menu.html  login.html  main-content.html  map.html  overview.html  planet-template.html  ships.html  snow.css  style.css  technologies.html
resources/html/css/: snow.css  style.css
resources/html/js/: document-ready.js  header-resources.js  header-ressources.js  left-menu.js  page-template.js  utils.js
src/client/: BrowserClient.cpp  BrowserClient.hh  CMakeLists.txt  CallBacks.cpp  CallBacks.hh  GlfwHandler.cpp  GlfwHandler.hh  ImageLoader.cpp  ImageLoader.hh  KeyMapper.cpp  KeyMapper.hh  MainHandler.cpp  MainHandler.hh  MessageHandler.cpp  MessageHandler.hh  RenderHandler.cpp  RenderHandler.hh  ServerApiHelper.cpp  ServerApiHelper.hh  Utils.cpp  Utils.hh  WebCore.cpp  WebCore.hh  WebCoreManager.cpp  WebCoreManager.hh  main.cpp  performance_test.cpp
src/client-test/: performance_test.cpp  render_all.html
src/client/mvc/: DataHandler.hpp  MvcHandler.cpp  MvcHandler.hh
src/common/: NetworkWrapper.hh  Toolbox.cpp  Toolbox.hh  UnionCast.hh
src/common/event/: Chrono.cpp  Chrono.hh
src/common/game/: Resources.cpp  Resources.hh
src/common/pattern/: IBinarizable.hh  ISerializable.hh  Observator.hpp  PClonable.hpp  PFactory.hpp  PSingleton.hpp
src/launcher/: main.cpp
src/network/client/: AClient.cpp  AClient.hh  AClientTcp.cpp  AClientTcp.hh  AClientTcpUdp.cpp  AClientTcpUdp.hh  AClientUdp.cpp  AClientUdp.hh  BeyondLightClient.cpp  BeyondLightClient.hh  ClientMessage.cpp  ClientMessage.hh  ClientNetworkHandler.cpp  ClientNetworkHandler.hh  IClient.hh  LauncherClient.cpp  LauncherClient.hh  NetworkHandler.cpp  NetworkHandler.hh  main.cpp
src/network/factories/: PClonable.hpp  PFactory.hpp  PSingleton.hpp  SocketFactory.hh
src/network/server/: AServer.cpp  AServer.hh  AServerTcp.cpp  AServerTcp.hh  AServerTcpUdp.cpp  AServerTcpUdp.hh  AServerUdp.cpp  AServerUdp.hh  BeyondLightServer.cpp  BeyondLightServer.hh  IServer.hh  Server.cpp  Server.hh  ServerMessage.cpp  ServerMessage.hh  ServerNetworkHandler.cpp  ServerNetworkHandler.hh  UpdaterServer.cpp  UpdaterServer.hh  main.cpp
src/network/socket/: ANetworkHandler.cpp  ANetworkHandler.hh  IAcceptor.hh  INetworkHandler.hh  ISocket.hh  ISocketMessage.hh  SocketFactory.hh  SocketMessage.cpp  SocketMessage.hh  TcpBoostAcceptor.cpp  TcpBoostAcceptor.hh  TcpBoostSslSocket.cpp  TcpBoostSslSocket.hh  UdpAsyncBoostSocket.cpp  UdpAsyncBoostSocket.hh  UdpSslAsyncBoostSocket.cpp  UdpSslAsyncBoostSocket.hh
src/server/: LoadedData.cpp  LoadedData.hh  LoggingHelper.cpp  LoggingHelper.hh  ModelData.cpp  ModelData.hh  ServerCore.cpp  ServerCore.hh  UniqueObject.cpp  UniqueObject.hh  main.cpp
src/server/api/: Api.cpp  Api.hh  ApiBuilding.cpp  ApiBuilding.hh  ApiPlanet.cpp  ApiPlanet.hh  ApiTechnology.cpp  ApiTechnology.hh  ApiUser.cpp  ApiUser.hh
src/server/storage/: Database.cpp  Database.hh
src/server/user/: AuthSystem.cpp  AuthSystem.hh  FullUser.cpp  FullUser.hh  RegisteredUsers.cpp  RegisteredUsers.hh  SessionIdentifier.cpp  User.cpp  (+2 more)
src/updater/: main.cpp
test/: unittest.cpp
(+92 files in other folders)
